@@ -7,6 +7,8 @@
       by default.
     * When dragging and dropping and/or adding nodes the nodes that whose
       locations have changed are always visible after the change.
+    * Added a Close All action to the file menu so that users can close all of
+      the open xml documents at once.
 
 04/21/2004  version 0.1.67  Ian Lewis <IanLewis@member.fsf.org>
 
